# remux

./: .dockerignore  .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.dev  LICENSE  LOCAL-PR-NOTES.md  MUSIC-CLIENT-COMPAT-AUDIT.md  Makefile.toml  PERFORMANCE-AUDIT.md  PR-DRAFT-admin-parity.md  PR-DRAFT-finamp-music-compat.md  PR-DRAFT-playlist-metadata.md  PRCHANGELOG.md  README.md  TODO-endpoints.md  cliff.toml  input.css  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
crates/dashboard/: Cargo.toml  Dioxus.toml
crates/dashboard/assets/: tailwind.css  theme.css
crates/dashboard/src/: main.rs
crates/remux-dashboard/: Cargo.toml
crates/remux-dashboard/assets/: tailwind.css  theme.css
crates/remux-dashboard/src/: layout.rs  main.rs  router.rs  state.rs  theme.rs
crates/remux-dashboard/src/components/: button.rs  card.rs  filters.rs  form.rs  icons.rs  metrics.rs  mod.rs  modal.rs  select.rs  server_info.rs  sessions.rs  states.rs  tasks.rs  theme_switch.rs
crates/remux-dashboard/src/pages/: activity_log.rs  addons.rs  api_keys.rs  appearance.rs  branding.rs  collections.rs  dashboard.rs  devices.rs  iptv.rs  logs.rs  mod.rs  settings.rs  streams.rs  telemetry.rs  users.rs
crates/remux-desktop/: Cargo.toml  build.rs
crates/remux-desktop/src/: main.rs
crates/remux-sdks/: Cargo.toml
crates/remux-sdks/src/: lib.rs
crates/remux-sdks/src/aio/: mod.rs
crates/remux-sdks/src/deezer/: mod.rs
crates/remux-sdks/src/introdb/: mod.rs
crates/remux-sdks/src/jellyfin/: endpoints.rs  models.rs
crates/remux-sdks/src/kitsu/: mod.rs
crates/remux-sdks/src/remux/: addons.rs  endpoints.rs  mod.rs  models.rs
crates/remux-sdks/src/remuxdb/: mod.rs
crates/remux-sdks/src/stremio/: mod.rs
crates/remux-sdks/src/tmdb/: mod.rs  movie.rs  series.rs
crates/remux-sdks/src/trakt/: mod.rs
crates/remux-server/: Cargo.toml
crates/remux-server/.sqlx/: query-7b8f6dc3c2017c845577c978c9e4318d7c2b93b8b7214fb30e195d26ae9082e8.json  query-a393fc8e630d7254ea37cea32c45f51d84660167e32042275a23cca91c6dd719.json
crates/remux-server/assets/: web-patches.js
crates/remux-server/benches/: common.rs  items.rs  search.rs  shows.rs  system.rs  users.rs
crates/remux-server/migrations/: 202403250001_init.sql  202507210001_device_created_at_and_activity_log.sql  202603130001_iptv.sql  202603140001_iptv_split.sql  202603251343_rename_media_id.sql  202603251344_fix_external_ids_null.sql  202603251345_media_relations_indexes.sql  202603270001_series_id.sql  202603280001_media_relations_character.sql  202604030001_user_media_state_last_played_at.sql  202604040001_collection_smart_filter.sql  202604040002_add_country_to_media.sql  202604040003_series_id_index.sql  202604040004_drop_collection_catalog_filter.sql  202604050001_reset_smart_filter.sql  202604070001_released_at_indexes.sql  202604070002_device_capabilities_remote_ip.sql  202604180001_streams_refreshed_at.sql  202604180002_normalize_country_alpha2.sql  202604180003_default_music_library.sql  202604220001_parental_rating_age.sql  202604240001_catalog_media_id_prefix.sql  202604260001_uniq_meta_exclude_tv_channel.sql  202604270001_media_kind_enabled_index.sql  202604280001_add_program_kind.sql  202604280002_provider_info.sql  202604290001_addons.sql  202604290002_seed_default_addons.sql  202604300001_remove_catalog_kind.sql  202604300002_migrate_aio_url_to_stremio_addon.sql  202604300003_seed_ytdlp_squid_addons.sql  202604300004_rename_source_to_stream.sql  202605010001_addons_enabled.sql  202605010002_addons_types.sql  202605010003_addons_uuid_blob.sql  202605010004_addon_preset.sql  202605020001_fix_empty_json_columns.sql  202605070001_clean_transcode_task_trigger.sql  202605080001_grandparent_fields.sql  202605080002_opendal_files.sql  (+93 more)
crates/remux-server/src/: aio.rs  common.rs  conversions.rs  device_profile.rs  embedded_static.rs  errors.rs  integration_test.rs  intro.rs  keyed_lock.rs  lib.rs  log_capture.rs  main.rs  metrics.rs  playback_session.rs  profile.rs  result_ext.rs  stream.rs  torrent.rs  utils.rs  web_client.rs  web_patches.rs  web_transform.rs  ws.rs
crates/remux-server/src/addons/: addon.rs  deezer.rs  eclipse.rs  introdb.rs  iptv.rs  lrclib.rs  mod.rs  opendal.rs  probe.rs  row.rs  squid.rs  stremio.rs  tmdb.rs  torznab.rs  trakt.rs  ytdlp.rs
crates/remux-server/src/api/: addons.rs  admin_stubs.rs  anfi.rs  api_keys.rs  artists.rs  client_log.rs  collections.rs  devices.rs  hls.rs  image.rs  images.rs  import_features.rs  instantmix.rs  intro.rs  items.rs  livetv.rs  localization.rs  login.html  logs.rs  lyrics.rs  metadata.rs  mod.rs  models.rs  music.rs  (+16 more)
crates/server/: Cargo.toml  aio.rs  conversions.rs  integration_test.rs  log_capture.rs  main.rs  meta_provider.rs  store.rs  test.rs  utils.rs  web_patches.rs  web_transform.rs  ws.rs
crates/server/.sqlx/: query-f3a011eae48a1955276970e3d10b5dd926cd826a079511caff80165459bb5a25.json
crates/server/db/: api_key.rs  auth.rs  media.rs  settings.rs  task.rs  user.rs
crates/server/jellyfin/: mod.rs  models.rs
crates/server/migrations/: 202403250001_init.sql  202403250003_user_policy.sql  202403250005_default_libraries.sql  202403250006_device_last_activity.sql  202403250007_rename_catalog_to_collection.sql  202403250008_collection_catalog.sql  202403250009_relation_catalog_role.sql  202403250010_catalog_items_and_collection_filter.sql  202603010001_title_index.sql  202603010002_media_tags.sql  202603130002_iptv_xtream.sql  202603160001_digital_released_at.sql  202603170001_media_status.sql  202603190001_task_trigger_kind.sql  202603210001_fix_orphaned_seasons.sql  202603251342_external_ids.sql
crates/server/sdks/: mod.rs
crates/server/src/: aio.rs  conversions.rs  errors.rs  integration_test.rs  log_capture.rs  main.rs  torrent.rs  utils.rs  web_patches.rs  ws.rs
crates/server/tasks/: catalog_import.rs  catalog_item_import.rs  collection_import.rs  mod.rs  refresh_library.rs  series_sync.rs
crates/server/transcode/: engine.rs  mod.rs  probing.rs  session.rs
(+520 files in other folders)
