[package]
name = "remux"
version = "0.0.0-dev"
authors = ["lostb1t <coding-mosses0z@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#remux-macros = { path = "./remux-macros" }
dioxus = { version = "0.7.0-alpha.3", default-features = false, features = ["router"] }
dioxus-logger = "0.7.0-alpha.3"
eyre = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
strum = "0.26.3"
strum_macros = "0.26.4"
dyn-clone = "1.0.18"
async-trait = "0.1.86"

#dioxus-motion = { git = "https://github.com/wheregmis/dioxus-motion.git", branch = "main", optional = true, default-features = false }
proc-macro2 = "1.0.93"
#dioxus-primitives = "0.0.0"
serde_derive = "1.0.219"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components"}
#dioxus-liveview = { git = "https://github.com/ealmloff/dioxus-liveview", branch = "0.7" }
dioxus_storage = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
dioxus-time = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
dioxus-sdk = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
anyhow = "1.0.98"
url = "2.5.4"
bon = { version = "3" }
#derive_builder = "0.20.2"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14.0"
http = "1.3.1"
bytes = "1.10.1"
#dioxus-lazy = "0.3.0-alpha.3"
serde_with = { version = "3.13.0", features = ["macros"] }
derive_more = { version = "2", features = ["debug"] }
thiserror = "2.0.12"
dioxus-free-icons = { git = "https://github.com/lostb1t/dioxus-free-icons", features = ["feather", "hero-icons-outline", "hero-icons-solid", "font-awesome-solid", "ionicons"]}
#dioxus-free-icons = { version = "0.9", features = ["feather"] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
#dioxus-sdk = "0.6.0"
# tokio = { version = "1.46", features = ["time"] }
futures-timer = "3"

image = "0.25.6"
base64 = "0.22.1"
tracing-subscriber = "0.3.19"
serde_qs = "1.0.0-rc.3"
web-sys = { version = "0.3.77", optional = false, features = ["Element", "HtmlCollection","Window", "Navigator"]}
gloo-timers = "0.3.0"
features = "0.10.0"
futures = "0.3.31"
#console_error_panic_hook = "0.1.7"
once_cell = "1.21.3"
cached = { version = "0.55.1", features = ["async"] }
#daisy_rsx = "0.1.42"
serde-querystring = "0.3.0"
ordered-float = { version = "5", features = ["serde"] }
whoami = { version = "1.6.0", optional = true, default-features = false }
#icondata = "0.6.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.9", features = ["std", "os_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.17.0", features = ["js", "v4"] }
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3" }
rand = { version = "0.9" }
uuid = { version = "1.17.0", features = ["v4"] }

[features]
default = ["web"]
web = ["dioxus/web", "whoami/web", "whoami/web-sys"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop", "dep:whoami"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch.crates-io]
dioxus-sdk = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
dioxus_storage = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
dioxus-time = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
