[package]
name = "remux-server"
version = "0.1.0"
authors = ["lostb1t <coding-mosses0z@icloud.com>"]
edition = "2024"

#[workspace]
#members = [".", "migration"]
#resolver = "2"

[[bin]]
name = "remux-server"
path = "src/main.rs"

[dependencies]
#migration = { path = "./migration" }
#dioxus = { version = "0.6.2" }
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls-native-roots",
] }
serde = "1.0.216"
serde_json = "1.0.137"
tokio = { version = "1.43", features = ["full", "io-util", "time"] }
#dioxus-ssr = "0.6.2"
axum = "0.8"
axum-valid = "0.24.0"
#axum-route = "0.1.1"
tracing-subscriber = { version = "^0.3.19", features = [
    "fmt",
    "env-filter",
    "json",
    "tracing-log",
] }
serde_derive = "1.0.219"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-log = "0.2.0"
tower = { version = "0.5.2", features = ["tokio", "util"] }
tower-http = { version = "0.6.2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
bon = "3.7"
serde_with = { version = "3", features = ["chrono", "macros"] }
regress = "0.10.3"
uuid = "1.16.0"
http = "1.3.1"
#tokio-util = "0.7.15"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3.31"
axum-extra = { version = "0.10.1", features = [
    "file-stream",
    "typed-header",
    "query",
] }
fake = { version = "4.3.0", features = ["derive"] }
strum_macros = "0.26"
strum = "0.26"
base64 = "0.22.1"
#sqlx = { version = "0.8.5", features = ["sqlite", "postgres", "any", "chrono", "macros", "migrate", "runtime-tokio"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
flate2 = "1.1.1"
futures = "0.3.31"
async-compression = "0.4.23"
backon = "1.5.2"
itertools = "0.14.0"
merge = "0.2.0"
tempfile = "3.20.0"
ffprobe = { git = "https://github.com/theduke/ffprobe-rs.git", branch = "main" }
http-cache-reqwest = { version = "0.16", default-features = true }
reqwest-middleware = { version = "0.4", default-features = false, features = [
    "rustls-tls",
] }
isolang = "2.4.0"
timed = "0.2.1"
async-trait = "0.1.88"
axum-proxy = "0.5.0"
headers = "0.4.0"
urlencoding = "2.1.3"
url = "2.5.4"
thiserror = "2.0.14"
serde_qs = "0.15.0"
bytes = "1.10.1"
csv-async = { version = "1.3.1", features = ["tokio-stream", "tokio", "serde"] }
toml = "0.9.5"
base36 = "0.0.1"
figment = { version = "0.10.19", features = ["toml", "env"] }
dotenvy = "0.15.7"
duration-str = "0.17.0"
reqwest-retry = "0.7.0"
default2 = "1.0.2"
serde_alias = "0.0.2"
#ez-ffmpeg = { version = "0.6.0" }
#ez-ffmpeg = { version = "0.6.0", features = ["static"] }
#ffmpeg-sys-next = "=7.1.3"
#ffmpeg-next = { version = "7.1.0", features = ["build "] }
#ffmpeg-sys-next = { version = "8" }

[dependencies.sea-orm-migration]
version = "1.1.2"
features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"]

[features]
default = []

[patch.crates-io]
#ez-ffmpeg = {path = "../ez-ffmpeg"}
#reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
#native-tls = { version = "0.2.14", default-features = false }
