[package]
name = "remux-server"
version = "0.1.0"
authors = ["lostb1t <coding-mosses0z@icloud.com>"]
edition = "2024"

[[bin]]
name = "remux-server"
path = "src/main.rs"

[dependencies]
# 12 needed for milldeware compatibility
reqwest = { version = "0.12.0", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    # "rustls",
] }
serde = "1.0"
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["full", "io-util", "time"] }
axum = "^0.8"
# axum-valid = "0.24.0"
tracing-subscriber = { version = "^0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "tracing-log",
] }
serde_derive = "1.0"
anyhow = "^1.0"
tracing = "^0.1"
tracing-log = "^0.2"
tower = { version = "^0.5", features = ["tokio", "util"] }
tower-http = { version = "^0.6", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bon = "3.8"
serde_with = { version = "3", features = ["chrono", "macros"] }
# regress = "0.10.3"
uuid = { version = "1.8", features = ["v5", "serde"] }
http = "1.4.0"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3.31"
axum-extra = { version = "0.12.5", features = [
    "file-stream",
    "typed-header",
    "query",
] }
fake = { version = "4.3.0", features = ["derive"] }
strum_macros = "^0.27"
strum = "^0.27"
base64 = "^0.22"
tokio-stream = { version = "0.1", features = ["io-util"] }
flate2 = "1.1.1"
futures = "0.3.31"
async-compression = "0.4.23"
backon = "1.5.2"
itertools = "0.14.0"
merge = "0.2.0"
tempfile = "3.20.0"
ffprobe = { git = "https://github.com/theduke/ffprobe-rs.git", branch = "main" }
#http-cache-reqwest = { version = "0.16", default-features = true, features = ["manager-moka"] }
reqwest-middleware = { version = "0.4", default-features = false, features = ["rustls-tls"] }
isolang = "2.4.0"
timed = "0.2.1"
async-trait = "0.1.88"
# axum-proxy = "0.5.0"
headers = "0.4.0"
urlencoding = "2.1.3"
url = "2.5.4"
thiserror = "^2.0"
serde_qs = "0.15.0"
bytes = "1.10.1"
csv-async = { version = "1.3.1", features = ["tokio-stream", "tokio", "serde"] }
toml = "^0.9"
base36 = "0.0.1"
dotenvy = "0.15.7"
duration-str = "0.18.0"
reqwest-retry = "0.8.0"
default2 = "1.0.2"
serde_alias = "0.0.2"
axum-anyhow = "0.10.3"
moka = { version = "0.12.12", features = ["sync"] }
reqwest-tracing = "0.5.8"
serde_urlencoded = "0.7.1"
config = "0.15.19"
#ez-ffmpeg = { version = "0.6.0" }
serde-aux = "0.5.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "uuid" ] }
argon2 = { version = "0.5.3", default-features = true}
# argo depends on 0,8
rand = { version = "0.8", features = ["getrandom"] }
md5 = "0.8.0"
postcard = { version = "1.1.3", features = ["alloc"] }

#[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
#ez_ffmpeg_arm = { package = "ez-ffmpeg", path = "vendor/ez-ffmpeg" }

#[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
#ez_ffmpeg_upstream = { package = "ez-ffmpeg", version = "0.6" }

[features]
default = []

