[package]
name = "remux-desktop"
version = "0.0.0"
edition = "2024"
description = "Remux desktop app"

[[bin]]
name = "remux-desktop"
path = "src/main.rs"

[package.metadata.bundle]
name = "Remux"
identifier = "io.remux.desktop"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
resources = []
copyright = "Copyright (c) 2024"
category = "public.app-category.entertainment"
short_description = "Remux media server"
long_description = "Self-hosted media server with streaming and transcoding support."

[dependencies]
remux-server = { path = "../remux-server", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
dirs = "5"
open = "5"
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

include_dir = "0.7"

[build-dependencies]
