[package]
name = "remux-sdks"
version = "0.0.0"
edition = "2024"

[dependencies]
remux-utils = { path = "../remux-utils" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["chrono", "macros"] }
serde-aux = "4"
serde_alias = "0.0.2"
serde_urlencoded = "0.7"
http = "1"
url = "2"
anyhow = "1"
thiserror = "2"
itertools = "0.14"
md5 = "0.8"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum_macros = "0.27"
strum = "0.27"
tracing = "0.1"
merge = "0.2"
default2 = "1"
duration-str = "0.18"
serde_derive = "1"
nutype = { version = "0.6", features = ["serde", "regex"] }
regex = "1"

[features]
default = []
native = ["reqwest/rustls-tls"]
