[package]
name = "remux-server"
version = "0.1.0"
authors = ["lostb1t <coding-mosses0z@icloud.com>"]
edition = "2024"
default-run = "remux-server"

[lib]
name = "remux_server"
path = "src/lib.rs"

[[bin]]
name = "remux-server"
path = "src/main.rs"

[dependencies]
# 12 needed for milldeware compatibility
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls",
] }
serde = "1.0"
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["full", "io-util", "time"] }
axum = { version = "^0.8", features = ["ws"] }
tracing-subscriber = { version = "^0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "tracing-log",
    "time",
    "local-time",
    "chrono"
] }
serde_derive = "1.0"
anyhow = "^1.0"
libc = "0.2"
tracing = "^0.1"
tracing-log = "^0.2"
tower = { version = "^0.5", features = ["tokio", "util"] }
tower-http = { version = "^0.6", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_with = { version = "3", features = ["chrono", "macros"] }
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
http = "1.4.0"
http-body = "1.0"
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures-util = "0.3.31"
axum-extra = { version = "0.12.5", features = [
    "file-stream",
    "typed-header",
    "query",
] }
#fake = { version = "4.3.0", features = ["derive"] }
strum_macros = "^0.27"
strum = "^0.27"
#base64 = "^0.22"
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
#flate2 = "1.1.1"
futures = "0.3.31"
async-compression = "0.4.23"
#backon = "1.5.2"
itertools = "0.14.0"
#merge = "0.2.0"
tempfile = "3.20.0"
#reqwest-middleware = { version = "0.4", default-features = false, features = ["rustls-tls"] }
remux-sdks = { path = "../remux-sdks", features = ["native"] }
isolang = { version = "2.4.0", features = ["list_languages"] }
timed = "0.2.1"
async-trait = "0.1.88"
headers = "0.4.0"
#urlencoding = "2.1.3"
url = "2.5.4"
thiserror = "^2.0"
#serde_qs = "0.15.0"
bytes = "1.10.1"
csv-async = { version = "1.3.1", features = ["tokio-stream", "tokio", "serde"] }
#toml = "^0.9"
#base36 = "0.0.1"
dotenvy = "0.15.7"
dirs = "5"
include_dir = { version = "0.7", optional = true }
duration-str = "0.18.0"
#reqwest-retry = "0.8.0"
default2 = "1.0.2"
serde_alias = "0.0.2"
axum-anyhow = "0.10.3"
moka = { version = "0.12.12", features = ["sync"] }
#reqwest-tracing = "0.5.8"
#serde_urlencoded = "0.7.1"
config = "0.15.19"
serde-aux = "4.7.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "uuid", "chrono" ] }
argon2 = { version = "0.5.3", default-features = true}
# argo depends on 0,8
rand = { version = "0.8", features = ["getrandom"] }
#md5 = "0.8.0"
#cron_tab = { version = "0.2", features = ["sync", "async"] }
tokio-cron-scheduler = "*"
inventory = "0.3"
remux-macros = { path = "../remux-macros" }
dashmap = "5.5"
rust_iso3166 = "0.1.14"
quick-xml = { version = "0.37", features = ["encoding"] }

librqbit = { version = "8", features = ["http-api", "tracing-subscriber-utils"] }
regex = "1"
log = "0.4"
env_logger = "0.11"

[features]
default = []
desktop = ["include_dir"]

[dev-dependencies]
axum-test = "18.7.0"
